--- a/profile/index.html
+++ b/profile/index.html
@@ -1038,7 +1038,7 @@
     </div> <!-- CLOSES viewMobileHome -->
 
     <!-- 2. MOBILE RECORD (THE VERTICAL VAULT) -->
-    <div id="viewMobileRecord" class="mob-frame" style="display:none; flex-direction:column; padding-left:0; padding-right:0; padding-top:10px;">
+<div id="viewMobileRecord" class="mob-frame" style="display:none; height: 100vh !important; flex-direction:column; padding: 0 !important; background: #000; z-index: 10;">
 
     <!-- 1. FIXED HEADER (Dynamic Name) -->
    <div class="mob-chat-header" style="flex-shrink: 0; width: 100%; justify-content: center; border-bottom: 1px solid #333; background: #000; padding: 15px 0; z-index: 50;">
