--- a/profile/index.html
+++ b/profile/index.html
@@ -1044,7 +1044,7 @@
     <!-- =======================================================
          1. DASHBOARD (HOME)
          ======================================================= -->
-    <div id="viewMobileHome" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; display: flex; flex-direction: column; padding: 0; z-index: 1;">
+    <div id="viewMobileHome" style="position: fixed; top: 0; left: 0; width: 100%; height: calc(100% - 60px); overflow: hidden; display: flex; flex-direction: column; padding: 0; z-index: 1; padding-bottom: 60px;">
         
         <!-- === FIXED LAYER (Background & HUD) === -->
         <div class="mob-bg-layer">
@@ -1294,7 +1294,7 @@
     <!-- =======================================================
          2. MOBILE RECORD (THE VERTICAL VAULT) - [FIXED]
          ======================================================= -->
-    <div id="viewMobileRecord" class="mob-frame" style="display:none; position: fixed; top: 0; left: 0; width: 100%; height: 100vh !important; overflow: hidden !important; flex-direction: column; padding: 0 !important; background: #000; z-index: 10;">
+    <div id="viewMobileRecord" class="mob-frame" style="display:none; position: fixed; top: 0; left: 0; width: 100%; height: calc(100% - 60px) !important; overflow: hidden !important; flex-direction: column; padding: 0 !important; background: #000; z-index: 10; padding-bottom: 60px;">
 
         <!-- RECORD HEADER -->
         <div class="mob-chat-header" style="flex-shrink: 0; width: 100%; justify-content: space-between; border-bottom: 1px solid #333; background: #000; padding: 0 15px; z-index: 50;">
@@ -1340,7 +1340,7 @@
     <!-- =======================================================
          5. GLOBAL VIEW (Record Layout Clone)
          ======================================================= -->
-    <div id="viewMobileGlobal" class="mob-frame" style="display:none; position: fixed; top: 0; left: 0; width: 100%; height: 100vh !important; overflow: hidden !important; flex-direction: column; padding: 0 !important; background: #000; z-index: 100;">
+    <div id="viewMobileGlobal" class="mob-frame" style="display:none; position: fixed; top: 0; left: 0; width: 100%; height: calc(100% - 60px) !important; overflow: hidden !important; flex-direction: column; padding: 0 !important; background: #000; z-index: 100; padding-bottom: 60px;">
         
         <!-- HEADER -->
         <div class="mob-chat-header" style="flex-shrink: 0; width: 100%; justify-content: center; border-bottom: 1px solid #333; background: #000; padding: 15px 0; z-index: 50;">
@@ -1441,6 +1441,15 @@
             <!-- Action -->
             <button class="mob-action-btn" onclick="closeRewardCard()">ACKNOWLEDGE</button>
         </div>
+    </div>
+
+    <!-- MOBILE FOOTER NAVIGATION (Glued to bottom) -->
+    <div id="mobile-footer-nav" style="position: absolute; bottom: 0; left: 0; right: 0; width: 100%; height: 60px; background: linear-gradient(to top, #000 40%, rgba(0,0,0,0.95)); border-top: 1px solid rgba(197, 160, 89, 0.3); display: flex; justify-content: space-around; align-items: center; z-index: 99999; padding: 0; margin: 0; box-sizing: border-box; flex-shrink: 0;">
+        <button onclick="window.toggleMobileView('home')" style="flex: 1; height: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center; gap: 4px; background: none; border: none; color: #666; font-family: 'Cinzel', serif; font-size: 0.55rem; cursor: pointer; padding: 0; margin: 0;"><span style="font-size: 1.4rem; color: #888;">◈</span><span>PROFILE</span></button>
+        <button onclick="window.toggleMobileView('record')" style="flex: 1; height: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center; gap: 4px; background: none; border: none; color: #666; font-family: 'Cinzel', serif; font-size: 0.55rem; cursor: pointer; padding: 0; margin: 0;"><span style="font-size: 1.4rem; color: #888;">▦</span><span>RECORD</span></button>
+        <button onclick="window.toggleMobileView('chat')" style="flex: 1; height: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center; gap: 4px; background: none; border: none; color: #ff003c; font-family: 'Cinzel', serif; font-size: 0.55rem; cursor: pointer; padding: 0; margin: 0;"><img src="https://static.wixstatic.com/media/ce3e5b_19faff471a434690b7a40aacf5bf42c4~mv2.png" alt="Avatar" style="width: 50px; height: 50px; border-radius: 50%; object-fit: cover; border: 1px solid #ff003c; box-shadow: 0 0 10px rgba(255,0,60,0.3);"></button>
+        <button onclick="window.toggleMobileView('queen')" style="flex: 1; height: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center; gap: 4px; background: none; border: none; color: #666; font-family: 'Cinzel', serif; font-size: 0.55rem; cursor: pointer; padding: 0; margin: 0;"><span style="font-size: 1.4rem; color: #888;">♛</span><span>QUEEN</span></button>
+        <button onclick="window.toggleMobileView('global')" style="flex: 1; height: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center; gap: 4px; background: none; border: none; color: #666; font-family: 'Cinzel', serif; font-size: 0.55rem; cursor: pointer; padding: 0; margin: 0;"><span style="font-size: 1.4rem; color: #888;">⊕</span><span>GLOBAL</span></button>
     </div>
 
 </div> <!-- THIS IS THE CLOSING DIV FOR #MOBILE_APP -->
