--- a/profile/index.html
+++ b/profile/index.html
@@ -887,7 +887,7 @@
                       </div>
                       
                       <!-- 3. FILE INPUT (Hidden, dynamic accept attribute) -->
-                      <input type="file" id="chatMediaInput" class="hidden" onchange="window.handleEvidenceUpload(this)">
+                      <input type="file" id="chatMediaInput" class="hidden" onchange="window.handleAdminUpload(this)">
                   
                       <!-- 4. TRIBUTE (Desktop Only) -->
                       <button id="deskTributeBtn" class="chat-btn-tribute desktop-only" onclick="toggleTributeHunt()">🎁</button>
