--- a/profile/index.html
+++ b/profile/index.html
@@ -2151,8 +2151,7 @@
                                 </div>
                             </div>
 
-                            <div id="mob_chatContent" class="chat-area">
-                            </div>
+                            <div id="mob_chatContent" class="chat-area"></div>
                         </div>
 
                         <!-- Close Bar (Optional, to collapse it back) -->
